Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code

Changes on version 2.0.0 (current):
- Reduce ammount of static variables.
- Error domain, e.g. `kLzmaSDKObjCErrorDomain` was changed to `LzmaSDKObjC`.
- Deprecated xz decoding, will be removed in next release.
- 7z archive writer.

Changes on version 1.1.5 (current):
- Added error possible failure reason description.
  Use `NSLocalizedFailureReasonErrorKey` to get possible failure string.

Changes on version 1.1.4:
- Update C++ source to version 16.02 (1602 - latest for now).

Changes on version 1.1.3:
- Update C++ source to version 16.00.

Changes on version 1.1.2:
- Added functionality for compress/decompress single `NSData` buffer object with LZMA2.

Changes on version 1.0.7:
-  Fix Undefined value access.

Changes on version 1.0.4:
- Add nullability delegate flag to Objective-C reader.

Changes on version 1.0.3:
- Ignore debug log messages via `LZMASDKOBJC_NO_DEBUG_LOG`.

Changes on version 1.0.2:
- Move additional includes to private part of the code.

Changes on version 1.0.1:
- Lzma & lzma2 test reader.

Changes on version 1.0.0:
- Stable reader.

Changes on version 0.1.2:
- Update C++ source to version 15.14.

Changes on version 0.1.1:
- Update C++ source to version 15.12.

Changes on version 0.1.0:
- iOS min version 8.0.
- Cocoapods framework.

Changes on version 0.0.10:
- Added iOS framework target.

Changes on version 0.0.9:
- Extract empty archive folders.

Changes on version 0.0.8:
- Update LZMA SDK to version 15.12.
  Note: If you use XZ code from LZMA SDK, it's recommended to upgrade to new XZ code from 7-Zip 15.12.
  That new code fixes some bugs.

Changes on version 0.0.7:
- Enabled test functionality.

Changes on version 0.0.6:
- Add missed folder creation functionality during extract.
- Add initial error processing.

Changes on version 0.0.5:
- LzmaSDKObjCItem strong field references.

Changes on version 0.0.4:
- LzmaSDKObjCReader strong field references.
