@@ -1,6 +1,10 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
-Changes on version 2.0.0 (current):
+Changes on version 2.0.1 (current):
+- Remove xz support.
+- Customize all writer settings.
+
+Changes on version 2.0.0:
 - Reduce ammount of static variables.
 - Error domain, e.g. `kLzmaSDKObjCErrorDomain` was changed to `LzmaSDKObjC`.
 - Deprecated xz decoding, will be removed in next release.
